[package]
name = "num-digitize"
description = "Converts integer of type N into Vec<i8> containing its digits."
homepage = "https://github.com/lunemec/rust-num-digitize"
repository = "https://github.com/lunemec/rust-num-digitize"
readme = "README.md"
keywords = ["digizize"]
license = "WTFPL"
version = "0.3.1"
authors = ["Nemec Lukas <lu.nemec@gmail.com>"]

[dependencies]
num = "0.1"
